--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 -->
 <html>
     <head>
-        <script data-ad-client="ca-pub-7141910886025764" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<title>DAIGOROMX</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,8 +18,14 @@
         <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
         <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    <script data-ad-client="ca-pub-7141910886025764" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    
+    <!-- Google tag (gtag.js) -->
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-S7CFPQWZKT');
+    </script>
     </head>
     <body class="is-loading">
 
